app/main/default/objects/LocalFlosum__Snapshot__c/fields/LocalFlosum__Filter__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>LocalFlosum__Filter__c</fullName>
        <label>Filter</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>