app/main/default/objects/LocalFlosum__Snapshot__c/fields/LocalFlosum__Is_Completed__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>LocalFlosum__Is_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Completed</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>