app/main/default/objects/LocalFlosum__Snapshot__c/fields/LocalFlosum__Last_Modified_In_Days__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>LocalFlosum__Last_Modified_In_Days__c</fullName>
        <label>Last Modified In Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>