app/main/default/objects/LocalFlosum__Snapshot__c/fields/LocalFlosum__Snapshot_ID__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>LocalFlosum__Snapshot_ID__c</fullName>
        <label>Snapshot ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
</CustomObject>